added HTML markup

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <body>
-    
+    <h1>My name is Angel Gomez</h1>
     <p>hello world</p>
   </body>
 </html>
